--- a/training/multiclass_MSSM_HWW_training.yaml
+++ b/training/multiclass_MSSM_HWW_training.yaml
@@ -1,230 +1,28 @@
-classes:
-    hww120_200:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M120.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M125.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M130.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M135.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M140.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M145.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M150.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M155.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M160.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M165.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M170.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M175.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M180.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M190.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M200.root
-
-    hww210_300:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M210.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M230.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M250.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_M270.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M300.root
-
-    hww350_500:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M350.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M400.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M450.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M500.root
-
-    hww550_750:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M550.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M600.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M650.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M700.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M750.root
-
-    hww800_1500:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M800.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M900.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M1000.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M1500.root
-
-    hww2000_3000:
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M2000.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M2500.root
-        - /home/mf278754/master/files/latino/latino_GluGluHToWWTo2L2Nu_JHUGen698_M3000.root
-
-    dy:
-        - /home/mf278754/master/files/latino/latino_DYJetsToLL_M-10to50.root
-        - /home/mf278754/master/files/latino/latino_DYJetsToTT_MuEle_M-50__part0.root
-        - /home/mf278754/master/files/latino/latino_DYJetsToTT_MuEle_M-50__part1.root
-
-    WW:
-        - /home/mf278754/master/files/latino/latino_GluGluWWTo2L2Nu_MCFM.root
-        - /home/mf278754/master/files/latino/latino_WWTo2L2Nu.root
-
-    VVV:
-        - /home/mf278754/master/files/latino/latino_WWW.root
-        - /home/mf278754/master/files/latino/latino_WWZ.root
-        - /home/mf278754/master/files/latino/latino_WZZ.root
-        - /home/mf278754/master/files/latino/latino_ZZZ.root
-
-    DiBoson:
-        - /home/mf278754/master/files/latino/latino_Wg_MADGRAPHMLM.root
-        - /home/mf278754/master/files/latino/latino_WgStarLNuEE.root
-        - /home/mf278754/master/files/latino/latino_WgStarLNuMuMu.root
-        - /home/mf278754/master/files/latino/latino_WZTo2L2Q__part0.root
-        - /home/mf278754/master/files/latino/latino_WZTo2L2Q__part1.root
-        - /home/mf278754/master/files/latino/latino_WZTo2L2Q__part2.root
-        - /home/mf278754/master/files/latino/latino_WZTo2L2Q__part3.root
-        - /home/mf278754/master/files/latino/latino_WZTo3LNu.root
-        - /home/mf278754/master/files/latino/latino_Zg__part0.root
-        - /home/mf278754/master/files/latino/latino_Zg__part1.root
-        - /home/mf278754/master/files/latino/latino_Zg__part2.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Nu__part0.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Nu__part1.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Nu__part2.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Q__part0.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Q__part1.root
-        - /home/mf278754/master/files/latino/latino_ZZTo2L2Q__part2.root
-
-    wjets:
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016F-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016B-03Feb2017_ver2-v2__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016B-03Feb2017_ver2-v2__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016H-03Feb2017_ver2-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016H-03Feb2017_ver2-v1__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016D-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016H-03Feb2017_ver2-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016D-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016B-03Feb2017_ver2-v2__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016G-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016H-03Feb2017_ver2-v1__part3.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016C-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016H-03Feb2017_ver2-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016D-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016E-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016G-03Feb2017-v1__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016E-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016B-03Feb2017_ver2-v2__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016E-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016E-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016E-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016B-03Feb2017_ver2-v2.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016G-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016G-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016C-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016F-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016H-03Feb2017_ver2-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016B-03Feb2017_ver2-v2__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016B-03Feb2017_ver2-v2__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016F-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016H-03Feb2017_ver2-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016H-03Feb2017_ver2-v1__part3.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016F-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016H-03Feb2017_ver2-v1__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016H-03Feb2017_ver2-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016C-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016H-03Feb2017_ver2-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016H-03Feb2017_ver2-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016G-03Feb2017-v1__part3.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016C-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016C-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016B-03Feb2017_ver2-v2__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016C-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016G-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016E-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016G-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016H-03Feb2017_ver2-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016E-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016G-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016H-03Feb2017_ver2-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016B-03Feb2017_ver2-v2.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016D-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016D-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016G-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016F-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016F-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016G-03Feb2017-v1__part3.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016G-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016D-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016F-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016B-03Feb2017_ver2-v2__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_MET_Run2016F-03Feb2017-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016D-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016H-03Feb2017_ver3-v1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016D-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleElectron_Run2016G-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleEG_Run2016B-03Feb2017_ver2-v2__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016C-03Feb2017-v1__part1.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016G-03Feb2017-v1__part2.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016B-03Feb2017_ver2-v2__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_DoubleMuon_Run2016C-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_SingleMuon_Run2016G-03Feb2017-v1__part0.root
-        - /home/mf278754/master/files/wjets_data/latino_MuonEG_Run2016E-03Feb2017-v1.root
-
-
-    top:
-        - /home/mf278754/master/files/latino/latino_ST_s-channel.root
-        - /home/mf278754/master/files/latino/latino_ST_t-channel_antitop.root
-        - /home/mf278754/master/files/latino/latino_ST_t-channel_top.root
-        - /home/mf278754/master/files/latino/latino_ST_tW_antitop.root
-        - /home/mf278754/master/files/latino/latino_ST_tW_top.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part0.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part1.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part2.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part3.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part4.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part5.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part6.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part7.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part9.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part10.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part11.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part12.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part13.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part14.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part15.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part16.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part17.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part18.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part19.root
-        - /home/mf278754/master/files/latino/latino_TTTo2L2Nu__part20.root
-
 class_weights:
-    hww120_200: 1.0
-    hww210_300: 1.0
-    hww350_500: 1.0
-    hww550_750: 5.0
-    hww800_1500: 10.0
-    hww2000_3000: 30.0
-    dy: 1.0
+    hww120_300: 1.0
+    hww350_750: 1.0
+    hww800_3000: 10.0
+    DY: 1.0
     WW: 1.0
     VVV: 1.0
     DiBoson: 1.0
-    wjets: 1.0 
-    top: 1.0
+    WJets: 1.0
+    Top: 1.0
 
 classes:
-    - hww120_200
-    - hww210_300
-    - hww350_500
-    - hww550_750
-    - hww800_1500
-    - hww2000_3000
-    - dy
+    - hww120_300
+    - hww350_750
+    - hww800_3000
+    - DY
     - WW
     - VVV
     - DiBoson
-    - wjets
-    - top
+    - WJets
+    - Top
 
-
-#general_cut: event%10<4
-
-output_path: /home/mf278754/master/
+output_path: /net/scratch_cms3b/fackeldey/
 
 global_weight: 1.
-
-#event_weights: weights
 
 #features = training variables
 features:
