--- a/training/configs/multiclass_MSSM_HWW_training.yaml
+++ b/training/configs/multiclass_MSSM_HWW_training.yaml
@@ -1,6 +1,6 @@
 trainingssets:
-    - /net/scratch_cms3b/fackeldey/trainingssets/fold0_MSSM_HWW_trainingsset.root
-    - /net/scratch_cms3b/fackeldey/trainingssets/fold1_MSSM_HWW_trainingsset.root
+    - /home/peter/mount/data/fold0_MSSM_HWW_trainingsset.root
+    - /home/peter/mount/data/fold1_MSSM_HWW_trainingsset.root
 
 class_weights:
     hww120_300: 1.0
@@ -24,7 +24,7 @@ classes:
     - WJets
     - Top
 
-output_path: /net/scratch_cms3b/fackeldey/
+output_path: /home/peter/mount/data
 
 global_weight: 1.
 
